<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3BFFC107"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_labellat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/latitude_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_00"
        app:layout_constraintStart_toEndOf="@+id/tv_labellat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_labellon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/longitude_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labellat" />

    <TextView
        android:id="@+id/tv_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_00"
        app:layout_constraintStart_toEndOf="@+id/tv_labellon"
        app:layout_constraintTop_toBottomOf="@+id/tv_lat" />

    <TextView
        android:id="@+id/tv_labelaltitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/altitude_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labellon" />

    <TextView
        android:id="@+id/tv_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        app:layout_constraintStart_toEndOf="@+id/tv_labelaltitude"
        app:layout_constraintTop_toTopOf="@+id/tv_labelaltitude" />

    <TextView
        android:id="@+id/tv_labelaccuracy"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/accurasy_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelaltitude" />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        app:layout_constraintStart_toEndOf="@+id/tv_labelaccuracy"
        app:layout_constraintTop_toTopOf="@+id/tv_labelaccuracy" />

    <TextView
        android:id="@+id/tv_labelspeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelaccuracy" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        app:layout_constraintStart_toEndOf="@+id/tv_labelspeed"
        app:layout_constraintTop_toTopOf="@+id/tv_labelspeed" />

    <TextView
        android:id="@+id/tv_labelsensor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_gps" />

    <TextView
        android:id="@+id/tv_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsensor_text_gsm_wifi"
        app:layout_constraintStart_toEndOf="@+id/tv_labelsensor"
        app:layout_constraintTop_toTopOf="@+id/tv_labelsensor" />

    <TextView
        android:id="@+id/tv_labelupdates"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/update_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_locationsupdates" />

    <TextView
        android:id="@+id/tv_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off_update_text_main"
        app:layout_constraintStart_toEndOf="@+id/tv_labelupdates"
        app:layout_constraintTop_toTopOf="@+id/tv_labelupdates" />

    <Switch
        android:id="@+id/sw_locationsupdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:backgroundTintMode="add"
        android:buttonTint="#9E9696"
        android:checked="false"
        android:text="@string/location_update_text_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Switch
        android:id="@+id/sw_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gps_savepower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelupdates" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tv_lbladdress"
        app:layout_constraintTop_toTopOf="@+id/tv_lbladdress" />

    <TextView
        android:id="@+id/tv_lbladdress"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/address_text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelspeed" />


    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_label_crumb_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Путевые точки:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelsensor" />

    <TextView
        android:id="@+id/tv_crumb_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/tv_label_crumb_count"
        app:layout_constraintTop_toTopOf="@+id/tv_label_crumb_count" />

    <Button
        android:id="@+id/btn_new_way_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Очистить список точек"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_crumb_count" />

    <Button
        android:id="@+id/btn_sho_wayPoint_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Поглазеть на список точек"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_way_point" />

    <Button
        android:id="@+id/btn_show_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8BC34A"
        android:text="Поглазеть на карте"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sho_wayPoint_list" />

</androidx.constraintlayout.widget.ConstraintLayout>


