<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:columnCount="3"
    android:rowCount="4"
    android:layout_gravity="center"
    android:background="@drawable/background_image"
    tools:context="com.pavel.multitool.MainActivity">

    <androidx.cardview.widget.CardView
        style="@style/card_view_style"
        android:layout_row="0"
        android:layout_column="0"
        android:onClick="noteLayout"
        app:cardBackgroundColor="#44444400"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="11dp"
            android:background="@drawable/reeple_button"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_text_icon"
                android:textColor="#000040"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_note_add_24" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/card_view_style"
        android:layout_row="0"
        android:layout_column="1"
        android:onClick="compassLayout"
        app:cardBackgroundColor="#44444400"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/reeple_button"
            android:layout_margin="11dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/compass_text"
                android:textColor="#000040"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_wb_sunny_24" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/card_view_style"
        android:layout_row="0"
        android:layout_column="2"
        android:onClick="flashLight"
        app:cardBackgroundColor="#44444400"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/reeple_button"
            android:layout_margin="11dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/flash_linc_text"
                android:textColor="#000040"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_flash_on_24" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/card_view_style"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="getTracker"
        app:cardBackgroundColor="#44444400"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/reeple_button"
            android:layout_margin="11dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/track_map_logo_main"
                android:textColor="#000040"
                android:textSize="15sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_baseline_track_map" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</GridLayout>